force-app/main/default/objects/RFP_Question_And_Answer__c/RFP_Question_And_Answer__c.object-meta.xml
<CustomObject>
    <label>RFP Question And Answer</label>
    <nameField>
        <displayFormat>RQA-{0000}</displayFormat>
        <label>RFP Question And Answer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Question And Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>