force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Answer_size_limit__c.field-meta.xml
<CustomField>
    <fullName>Answer_size_limit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer size limit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>