force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Auto_Finalised_By_AI__c.field-meta.xml
<CustomField>
    <fullName>Auto_Finalised_By_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Finalised By AI</label>
    <type>Checkbox</type>
</CustomField>