force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Final_Answer__c.field-meta.xml
<CustomField>
    <fullName>Final_Answer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>