force-app/main/default/objects/RFP_Question_And_Answer__c/fields/IsAiProcessed__c.field-meta.xml
<CustomField>
    <fullName>IsAiProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAiProcessed</label>
    <type>Checkbox</type>
</CustomField>