force-app/main/default/objects/RFP_Question_And_Answer__c/fields/IsAiRecommendationUsed__c.field-meta.xml
<CustomField>
    <fullName>IsAiRecommendationUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAiRecommendationUsed</label>
    <type>Checkbox</type>
</CustomField>