force-app/main/default/objects/RFP_Question_And_Answer__c/fields/IsFinalised__c.field-meta.xml
<CustomField>
    <fullName>IsFinalised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFinalised</label>
    <type>Checkbox</type>
</CustomField>