force-app/main/default/objects/RFP_Question_And_Answer__c/fields/IsMerged__c.field-meta.xml
<CustomField>
    <fullName>IsMerged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMerged</label>
    <type>Checkbox</type>
</CustomField>