force-app/main/default/objects/RFP_Question_And_Answer__c/fields/IsRevised__c.field-meta.xml
<CustomField>
    <fullName>IsRevised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRevised</label>
    <type>Checkbox</type>
</CustomField>