force-app/main/default/objects/RFP_Question_And_Answer__c/fields/IsStrategicQuestion__c.field-meta.xml
<CustomField>
    <fullName>IsStrategicQuestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStrategicQuestion</label>
    <type>Checkbox</type>
</CustomField>