force-app/main/default/objects/RFP_Question_And_Answer__c/fields/IsStyled__c.field-meta.xml
<CustomField>
    <fullName>IsStyled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStyled</label>
    <type>Checkbox</type>
</CustomField>