force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Locked_At__c.field-meta.xml
<CustomField>
    <fullName>Locked_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Locked At</label>
    <type>DateTime</type>
</CustomField>