force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Locked_By__c.field-meta.xml
<CustomField>
    <fullName>Locked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFP_Question_And_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>