force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Proposal_Gateway_Response__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Gateway_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposal Gateway Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>