force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thumbs-Up</fullName>
            </value>
            <value>
                <fullName>Thumbs-Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>