force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Rephrased_Response__c.field-meta.xml
<CustomField>
    <fullName>Rephrased_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AI Recommended Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>