force-app/main/default/objects/RFP_Question_And_Answer__c/fields/RFP__c.field-meta.xml
<CustomField>
    <fullName>RFP__c</fullName>
    <label>RFP</label>
    <referenceTo>RFP__c</referenceTo>
    <relationshipLabel>RFP Question And Answers</relationshipLabel>
    <relationshipName>RFP_Question_And_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>