force-app/main/default/objects/RFP_Question_And_Answer__c/fields/RFP_Question__c.field-meta.xml
<CustomField>
    <fullName>RFP_Question__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFP Question</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>