force-app/main/default/objects/RFP_Question_And_Answer__c/fields/RFP_Question_Number__c.field-meta.xml
<CustomField>
    <fullName>RFP_Question_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFP Question Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>