force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Section Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>