force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Sheet_Name__c.field-meta.xml
<CustomField>
    <fullName>Sheet_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sheet Name</label>
    <type>TextArea</type>
</CustomField>