force-app/main/default/objects/RFP_Question_And_Answer__c/fields/SubSection__c.field-meta.xml
<CustomField>
    <fullName>SubSection__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SubSection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>