force-app/main/default/objects/RFP_Question_And_Answer__c/fields/Tabular_Record__c.field-meta.xml
<CustomField>
    <fullName>Tabular_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tabular Record</label>
    <type>Checkbox</type>
</CustomField>